[package]
name = "pmtud-rs"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = { git = "https://github.com/libpnet/libpnet/", rev = "f34f2b0495" }
